[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
include = '(brpm|bddeb|\.py)$'


[tool.isort]
profile = "black"
line_length = 79
# We patch logging in main.py before certain imports
skip = ["cloudinit/cmd/main.py", ".tox", "packages", "tools"]

[tool.mypy]
follow_imports = "silent"
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
exclude = []

[[tool.mypy.overrides]]
module = [
    "apport.*",
    "BaseHTTPServer",
    "configobj",
    "debconf",
    "httplib",
    "jsonpatch",
    "paramiko.*",
    "pip.*",
    "pycloudlib.*",
    "serial",
    "tests.integration_tests.user_settings",
    "uaclient.*",
]
ignore_missing_imports = true
no_implicit_optional = true

# See GH-5445
[[tool.mypy.overrides]]
module = [
    "cloudinit.analyze",
    "cloudinit.analyze.dump",
    "cloudinit.analyze.show",
    "cloudinit.cmd.devel.hotplug_hook",
    "cloudinit.cmd.devel.make_mime",
    "cloudinit.cmd.devel.net_convert",
    "cloudinit.cmd.main",
    "cloudinit.config.cc_apt_configure",
    "cloudinit.config.cc_ca_certs",
    "cloudinit.config.cc_growpart",
    "cloudinit.config.cc_ntp",
    "cloudinit.config.cc_power_state_change",
    "cloudinit.config.cc_rsyslog",
    "cloudinit.config.cc_ubuntu_pro",
    "cloudinit.config.modules",
    "cloudinit.config.schema",
    "cloudinit.distros",
    "cloudinit.distros.alpine",
    "cloudinit.distros.azurelinux",
    "cloudinit.distros.bsd",
    "cloudinit.distros.opensuse",
    "cloudinit.distros.parsers.hostname",
    "cloudinit.distros.parsers.hosts",
    "cloudinit.distros.parsers.resolv_conf",
    "cloudinit.distros.ubuntu",
    "cloudinit.distros.ug_util",
    "cloudinit.helpers",
    "cloudinit.log",
    "cloudinit.mergers",
    "cloudinit.net",
    "cloudinit.net.cmdline",
    "cloudinit.net.dhcp",
    "cloudinit.net.eni",
    "cloudinit.net.ephemeral",
    "cloudinit.net.freebsd",
    "cloudinit.net.netbsd",
    "cloudinit.net.netplan",
    "cloudinit.net.network_manager",
    "cloudinit.net.network_state",
    "cloudinit.net.networkd",
    "cloudinit.net.sysconfig",
    "cloudinit.netinfo",
    "cloudinit.reporting.handlers",
    "cloudinit.sources.DataSourceAzure",
    "cloudinit.sources.DataSourceBigstep",
    "cloudinit.sources.DataSourceCloudSigma",
    "cloudinit.sources.DataSourceCloudStack",
    "cloudinit.sources.DataSourceConfigDrive",
    "cloudinit.sources.DataSourceDigitalOcean",
    "cloudinit.sources.DataSourceEc2",
    "cloudinit.sources.DataSourceExoscale",
    "cloudinit.sources.DataSourceGCE",
    "cloudinit.sources.DataSourceHetzner",
    "cloudinit.sources.DataSourceIBMCloud",
    "cloudinit.sources.DataSourceMAAS",
    "cloudinit.sources.DataSourceNoCloud",
    "cloudinit.sources.DataSourceOVF",
    "cloudinit.sources.DataSourceOpenNebula",
    "cloudinit.sources.DataSourceOpenStack",
    "cloudinit.sources.DataSourceOracle",
    "cloudinit.sources.DataSourceRbxCloud",
    "cloudinit.sources.DataSourceScaleway",
    "cloudinit.sources.DataSourceSmartOS",
    "cloudinit.sources.DataSourceVMware",
    "cloudinit.sources",
    "cloudinit.sources.helpers.azure",
    "cloudinit.sources.helpers.ec2",
    "cloudinit.sources.helpers.netlink",
    "cloudinit.sources.helpers.openstack",
    "cloudinit.sources.helpers.vmware.imc.config_file",
    "cloudinit.sources.helpers.vmware.imc.config_nic",
    "cloudinit.sources.helpers.vultr",
    "cloudinit.ssh_util",
    "cloudinit.stages",
    "cloudinit.temp_utils",
    "cloudinit.templater",
    "cloudinit.user_data",

    # tools/*
    "netplan_schema_check",
    "mock-meta",
]
check_untyped_defs = false

[tool.ruff]
target-version = "py37"
line-length = 79
# E, W, and F make up the entirety of default flake8
lint.select = [
    "D",   # pydocstyle
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "PIE", # flake8-pie
    "Q",   # flake8-quotes
]
lint.ignore = [
    "D100", # docstring: public module
    "D101", # docstring: public class required
    "D102", # docstring: public method required
    "D103", # docstring: public function required
    "D107", # docstring: __init__ required
    "D104", # docstring: public package required
    "D105", # docstring: magic method required
    "D200", # docstring: one line docstring shouldn't wrap
    "D202", # docstring: blank line
    "D205", # docstring: 1 blank line between initial and summary
    "D209", # docstring: closing quotes -> separate line
    "D400", # docstring: end with a period
    "D401", # docstring: imperative mood
    "D402", # docstring: docstring shouldn't start with func signature
    "D403", # docstring: capitalized first line
    "E731", # Do not assign a `lambda` expression, use a `def`
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
